--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "@types/react-redux": "^7.1.7",
     "@types/react-router-dom": "^5.1.3",
     "@types/styled-components": "^5.0.0",
+    "axios": "^0.24.0",
     "concurrently": "^5.1.0",
     "faker": "^4.1.0",
     "husky": "^4.2.3",
     "json-server": "^0.16.0",
     "lodash.random": "^3.2.0",
     "lodash.upperfirst": "^4.3.1",
+    "moment": "^2.29.1",
     "polished": "^3.4.4",
     "prettier": "^1.19.1",
     "pretty-quick": "^2.0.1",
@@ -23,6 +25,7 @@
     "react-dom": "^16.12.0",
     "react-redux": "^7.2.0",
     "react-scripts": "3.4.0",
+    "react-toastify": "^8.1.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "styled-components": "^5.0.1",
